Updated front part - js && html files

--- a/front/templates/budget/budget-account.html
+++ b/front/templates/budget/budget-account.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Budget account</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
-    <h1 class="page-header">Budget account <small><span class="glyphicon glyphicon-usd"></span></small></h1>
+    <h1 class="page-header">Budget Account<small><span class="glyphicon glyphicon-usd"></span></small></h1>
     <ul class="nav nav-tabs">
-        <li><a href="#">My budget</a></li>
-        <li><a href="#">Invoice</a></li>
-        <li class="active"><a href="#">Budget Account</a></li>
-        <li><a href="#">Currency</a></li>
-        <li><a href="#">Category budget</a></li>
+        <li><a href="#!/budget">My budget</a></li>
+        <li><a href="#!/budget/invoice">Invoice</a></li>
+        <li  class="active"><a href="#!/budget/account">Budget Account</a></li>
+        <li><a href="#!/budget/currency">Currency</a></li>
+        <li><a href="#!/budget/category">Category budget</a></li>
     </ul>
+    <button type="button" class="btn btn-info" ng-click="listBudgetAccount()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addBudgetAccount()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -21,50 +25,46 @@
                 <th>Name</th>
                 <th>Short name</th>
                 <th>Amount</th>
+                <th ng-hide="true">Description</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>USD</td>
-                <td>Card from Bank of America & Mastercard</td>
-                <td>Card USD</td>
-                <td>5864</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>EUR</td>
-                <td>MasterCard Debit Cards</td>
-                <td>Card EUR</td>
-                <td>1253</td>
+            <tr ng-repeat="item in listBA">
+                <td>{{ item.id }}</td>
+                <td>{{ item.currency }}</td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.short_name }}</td>
+                <td>{{ item.amount }}</td>
+                <td ng-hide="true">{{ item.description }}</td>
+                <td><button type="button" class="btn btn-info" ng-click="editBudgetAccount(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td><button type="button" class="btn btn-danger" ng-click="deleteBudgetAccount(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-        <h3>Add form</h3>
-    <div>
+    <div ng-if="addItemState || editItemState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-3">
-                Currency<input type="text" class="form-control" placeholder="Currency">
+                Currency<input type="text" class="form-control" ng-model="budgetAccount.currency">
             </div>
             <div class="col-md-3">
-                Name<input type="text" class="form-control" placeholder="Name">
+                Name<input type="text" class="form-control" ng-model="budgetAccount.name">
             </div>
             <div class="col-md-3">
-                Short name<input type="text" class="form-control" placeholder="Short name">
+                Short name<input type="text" class="form-control" ng-model="budgetAccount.short_name">
             </div>
             <div class="col-md-3">
-                Amount<input type="text" class="form-control" placeholder="Amount">
-            </div>
-            <div class="col-md-3">
-                Category<input type="text" class="form-control" placeholder="Category">
+                Amount<input type="text" class="form-control" ng-model="budgetAccount.amount">
             </div>
             <div class="col-md-6">
-                Description<input type="text" class="form-control" placeholder="Description">
+                Description<input type="text" class="form-control" ng-model="budgetAccount.description">
             </div>
-            <button type="button" class="btn btn-success">Add account</button>
+            <button type="button" class="btn btn-success" ng-click="createBudgetAccount()" ng-if="addItemState">
+                Add account</button>
+            <button type="button" class="btn btn-success" ng-click="updateBudgetAccount()" ng-if="editItemState">
+                Save account</button>
         </form>
     </div>
 </body>
