--- a/front/templates/task/short-task.html
+++ b/front/templates/task/short-task.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Short Task</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
     <h1 class="page-header">Short Task <small><span class="glyphicon glyphicon-check"></span></small></h1>
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#">Short Task</a></li>
-        <li><a href="#">Task</a></li>
-        <li><a href="#">Event</a></li>
-        <li><a href="#">Category Task</a></li>
+        <li class="active"><a href="#!task/short">Short Task</a></li>
+        <li><a href="#!task">Task</a></li>
+        <li><a href="#!task/event">Event</a></li>
+        <li><a href="#!task/category">Category Task</a></li>
     </ul>
+    <button type="button" class="btn btn-info" ng-click="listShortTask()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addShortTask()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -19,39 +23,39 @@
                 <th>Title</th>
                 <th>Creation date</th>
                 <th>Finished</th>
+                <th ng-hide="true">Body</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>My Title 1</td>
-                <td>1/01/2017</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Title 2</td>
-                <td>19/09/2018</td>
-                <td>+</td>
+            <tr ng-repeat="item in listST">
+                <td>{{ item.id }}</td>
+                <td>{{ item.title }}</td>
+                <td>{{ item.creation_date }}</td>
+                <td>{{ item.finished }}</td>
+                <td ng-hide="true">{{ item.body }}</td>
+                <td> <button type="button" class="btn btn-info" ng-click="editShortTask(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td> <button type="button" class="btn btn-danger" ng-click="deleteShortTask(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-    <h3>Add form</h3>
-    <div>
+    <div ng-if="addTaskState || editTaskState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-               Title<input type="text" class="form-control" placeholder="Title">
+                Title<input type="text" class="form-control" ng-model="shortTask.title">
             </div>
-            <div class="col-md-8">
-                Body<textarea class="form-control" rows="3"></textarea>
+            <div class="col-md-6">
+                Body<textarea class="form-control" rows="6" ng-model="shortTask.body"></textarea>
             </div>
             <div class="checkbox">
-                <label><input type="checkbox" value="">Finished</label>
+                <label><input type="checkbox" ng-model="shortTask.finished">Finished</label>
             </div>
-            <button type="button" class="btn btn-success">Add short task</button>
+            <button type="button" class="btn btn-success" ng-click="createShortTask()" ng-if="addTaskState">
+                Add task</button>
+            <button type="button" class="btn btn-success" ng-click="updateShortTask()" ng-if="editTaskState">
+                Save task</button>
         </form>
     </div>
 </body>
