--- a/front/templates/accounts/profile.html
+++ b/front/templates/accounts/profile.html
@@ -5,30 +5,39 @@
     <title>Profile</title>
 </head>
 <body>
+    <h1 class="page-header">User profile <small><span class="glyphicon glyphicon-user"></span></small></h1>
     <div class="col-md-6">
         <table class="table table-bordered">
-            <thead>
-                <th colspan="3">User profile</th>
-            </thead>
             <tbody>
                 <tr>
                     <td>Avatar:</td>
-                    <td><img src="img/organizer_logo_small.png"></td>
-                    <td><button type="button" class="btn btn-warning">Change avatar</button></td>
+                    <td><img src="{{item.avatar}}"></td>
+                    <td><button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
                 </tr>
                 <tr>
-                    <td>Name, surname:</td>
-                    <td><b>User Name</b></td>
-                    <td><button type="button" class="btn btn-warning">Change name</button></td>
+                    <td>Name, Surname:</td>
+                    <td><b>{{item.username}}<br>{{item.second_name}}</b></td>
+                    <td>
+                        <button type="button" class="btn btn-info" ng-click="updateName()">
+                        <span class="glyphicon glyphicon-pencil"></span></button>
+                        <input type="text" ng-model="new_name.username" placeholder="Name">
+                        <input type="text" ng-model="new_name.second_name" placeholder="Surname">
+                    </td>
                 </tr>
                 <tr>
                     <td>Email:</td>
-                    <td><b>user@mail</b></td>
-                    <td><button type="button" class="btn btn-warning">Change email</button></td>
+                    <td><b>{{item.email}}</b></td>
+                    <td>
+                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span>
+                        </button>
+                    </td>
                 </tr>
                 <tr>
                     <td>Password:</td>
-                    <td colspan="2"><button type="button" class="btn btn-warning">Change pass</button></td>
+                    <td><b>***password***</b></td>
+                    <td><button type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-pencil"></span></button></td>
                 </tr>
             </tbody>
         </table>
