--- a/front/templates/accounts/sing-in.html
+++ b/front/templates/accounts/sing-in.html
@@ -16,9 +16,7 @@
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required=""
                    ng-model="userdata.password">
             <div class="checkbox">
-              <label>
-                <input type="checkbox" value="remember-me"> Remember me
-              </label>
+              <!--<label><input type="checkbox" value="remember-me"> </label>-->
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="logIn()">Sign in</button>
           </form>
