--- a/front/templates/accounts/sing-up.html
+++ b/front/templates/accounts/sing-up.html
@@ -9,6 +9,7 @@
         <div class="col-md-4">
           <form class="form-signin">
             <h2 class="form-signin-heading">Please sign up</h2>
+              <h4 class="alert alert-danger"><strong>Attentione!</strong> Registration off!</h4>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
             <label for="inputPassword" class="sr-only">Password</label>
