--- a/front/templates/budget/budget-home.html
+++ b/front/templates/budget/budget-home.html
@@ -7,11 +7,11 @@
 <body>
     <h1 class="page-header">Budget <small><span class="glyphicon glyphicon-usd"></span></small></h1>
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#">My budget</a></li>
-        <li><a href="#">Invoice</a></li>
-        <li><a href="#">Budget Account</a></li>
-        <li><a href="#">Currency</a></li>
-        <li><a href="#">Category budget</a></li>
+        <li class="active"><a href="#!/budget">My budget</a></li>
+        <li><a href="#!/budget/invoice">Invoice</a></li>
+        <li><a href="#!/budget/account">Budget Account</a></li>
+        <li><a href="#!/budget/currency">Currency</a></li>
+        <li><a href="#!/budget/category">Category budget</a></li>
     </ul>
     <div class="table-responsive">
         <table class="table table-striped">
