--- a/front/templates/contacts/contacts.html
+++ b/front/templates/contacts/contacts.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
     <h1 class="page-header">Contacts <small><span class="glyphicon glyphicon-earphone"></span></small></h1>
+    <button type="button" class="btn btn-info" ng-click="listContacts()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addContact()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -16,57 +20,52 @@
                 <th>Home address</th>
                 <th>Birthday</th>
                 <th>Add reminder</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>Pasha, M</td>
-                <td>0356 524589654</td>
-                <td>pasha@mail</td>
-                <td>Home, His str., 5</td>
-                <td>25/01/2018</td>
-                <td>Yes</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Friend, Surname</td>
-                <td>0126 1212154</td>
-                <td>friend@mail</td>
-                <td>Country, Street str., 7</td>
-                <td>1/01/2017</td>
-                <td>No</td>
+            <tr ng-repeat="item in items">
+                <td>{{ item.id }}</td>
+                <td>{{ item.name }} {{ item.surname }}</td>
+                <td>{{ item.phone }}</td>
+                <td>{{ item.email_address }}</td>
+                <td>{{ item.home_address }}</td>
+                <td>{{ item.birthday | date:'dd.MM.yyyy' }}</td>
+                <td>{{ item.add_reminder }}</td>
+                <td> <button type="button" class="btn btn-info" ng-click="editContact(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td> <button type="button" class="btn btn-danger" ng-click="delete(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-    <h3>Add form</h3>
-    <div>
+    <!--<h3>Add form</h3>-->
+    <div ng-if="addContactState || editContactState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-                <input type="text" class="form-control" placeholder="Name">
+                Name<input type="text" class="form-control" ng-model="contact.name">
             </div>
             <div class="col-md-4">
-                <input type="text" class="form-control" placeholder="Surname">
+                Surname<input type="text" class="form-control" ng-model="contact.surname">
             </div>
             <div class="col-md-4">
-                <input type="tel" class="form-control" placeholder="Phone">
+                Phone<input type="tel" class="form-control" ng-model="contact.phone">
             </div>
             <div class="col-md-4">
-                <input type="email" class="form-control" placeholder="E-mail">
+                E-mail<input type="email" class="form-control" ng-model="contact.email_address">
             </div>
             <div class="col-md-4">
-                <input type="tel" class="form-control" placeholder="Home address">
+                Home address<input type="text" class="form-control" ng-model="contact.home_address">
             </div>
             <div class="col-md-2">
-                Birthday<input type="date" class="form-control" placeholder="Birthday">
+                Birthday<input type="date" class="form-control" format="mm/dd/yyyy" ng-model="contact.birthday">
             </div>
             <div class="checkbox">
-                <label><input type="checkbox" value="">Add reminder</label>
+                <label><input type="checkbox" value="" ng-model="contact.add_reminder">Add reminder</label>
             </div>
-            <button type="button" class="btn btn-success">Add contact</button>
+
+            <button type="button" class="btn btn-success" ng-click="createItem()" ng-if="addContactState">Add contact</button>
+            <button type="button" class="btn btn-success" ng-click="editItem()" ng-if="editContactState">Save contact</button>
         </form>
     </div>
 </body>
