--- a/front/templates/diary/diary.html
+++ b/front/templates/diary/diary.html
@@ -2,44 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Diary</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
-<h1 class="page-header">Diary <small><span class="glyphicon glyphicon-pencil"></span></small></h1>
+    <h1 class="page-header">Diary <small><span class="glyphicon glyphicon-pencil"></span></small></h1>
+    <button type="button" class="btn btn-info" ng-click="listDiary()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addDiary()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
                 <th># ID</th>
                 <th>Title</th>
                 <th>Creation date</th>
+                <th ng-hide="true">Body</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>My title</td>
-                <td>25/01/2018</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Friends</td>
-                <td>1/01/2017</td>
+            <tr ng-repeat="item in items">
+                <td>{{ item.id }}</td>
+                <td>{{ item.title }}</td>
+                <td>{{ item.creation_date | date:'dd.MM.yyyy' }}</td>
+                <td ng-hide="true">{{ item.body }}</td>
+                <td> <button type="button" class="btn btn-info" ng-click="editDiary(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td> <button type="button" class="btn btn-danger" ng-click="deleteDiary(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-    <h3>Add form</h3>
-    <div>
+    <div ng-if="addDiaryState || editDiaryState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-                <input type="text" class="form-control" placeholder="Title">
+                Title<input type="text" class="form-control" ng-model="diary.title">
             </div>
             <div class="col-md-8">
-                <textarea class="form-control" rows="3"></textarea>
+                Body<textarea rows="4" cols="100" class="form-control" ng-model="diary.body"></textarea>
             </div>
-            <button type="button" class="btn btn-success">Add diary</button>
+            <button type="button" class="btn btn-success" ng-click="createDiary()" ng-if="addDiaryState">
+                Add diary</button>
+            <button type="button" class="btn btn-success" ng-click="updateDiary()" ng-if="editDiaryState">
+                Save diary</button>
         </form>
     </div>
 </body>
