--- a/front/templates/task/event.html
+++ b/front/templates/task/event.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Event</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
     <h1 class="page-header">Event <small><span class="glyphicon glyphicon-check"></span></small></h1>
     <ul class="nav nav-tabs">
-        <li><a href="#">Task</a></li>
-        <li><a href="#">Task</a></li>
-        <li class="active"><a href="#">Event</a></li>
-        <li><a href="#">Category Task</a></li>
+        <li><a href="#!task/short">Short Task</a></li>
+        <li><a href="#!task">Task</a></li>
+        <li class="active"><a href="#!task/event">Event</a></li>
+        <li><a href="#!task/category">Category Task</a></li>
     </ul>
+    <button type="button" class="btn btn-info" ng-click="listEvent()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addEvent()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -20,47 +24,46 @@
                 <th>Starting date</th>
                 <th>Finishing date</th>
                 <th>Reminder date</th>
+                <th ng-hide="true">Body</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>My Title 1</td>
-                <td>1/01/2017</td>
-                <td>2/01/2017</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Title</td>
-                <td>25/03/2018</td>
-                <td>28/03/2018</td>
-                <td>23/03/2018</td>
+            <tr ng-repeat="item in listE">
+                <td>{{ item.id }}</td>
+                <td>{{ item.title }}</td>
+                <td>{{ item.event_date_start }}</td>
+                <td>{{ item.event_date_finish }}</td>
+                <td>{{ item.reminder_date }}</td>
+                <td ng-hide="true">{{ item.body }}</td>
+                <td><button type="button" class="btn btn-info" ng-click="editEvent(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td><button type="button" class="btn btn-danger" ng-click="deleteEvent(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-    <h3>Add form</h3>
-    <div>
+    <div ng-if="addTaskState || editTaskState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-                Title<input type="text" class="form-control" placeholder="Title">
+                Title<input type="text" class="form-control" ng-model="event.title">
             </div>
             <div class="col-md-8">
-                Body<textarea class="form-control" rows="3"></textarea>
+                Body<textarea class="form-control" rows="8" ng-model="event.body"></textarea>
             </div>
-            <div class="col-md-2">
-                Starting<input type="date" class="form-control" placeholder="Starting Date">
+            <div class="col-md-3">
+                Starting date<input type="text" class="form-control" ng-model="event.event_date_start">
             </div>
-            <div class="col-md-2">
-                Finished<input type="date" class="form-control" placeholder="Finished Date">
+            <div class="col-md-3">
+                Finishing date<input type="text" class="form-control" ng-model="event.event_date_finish">
             </div>
-            <div class="col-md-2">
-                Reminder<input type="date" class="form-control" placeholder="Reminder Date">
+            <div class="col-md-3">
+                Reminder date<input type="text" class="form-control" ng-model="event.reminder_date">
             </div>
-            <button type="button" class="btn btn-success">Add event</button>
+            <button type="button" class="btn btn-success" ng-click="createEvent()" ng-if="addTaskState">
+                Add event</button>
+            <button type="button" class="btn btn-success" ng-click="updateEvent()" ng-if="editTaskState">
+                Save event</button>
         </form>
     </div>
 </body>
