--- a/front/templates/task/task.html
+++ b/front/templates/task/task.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task</title>
+    <title>{{ vm.title }}</title>
 </head>
 <body>
     <h1 class="page-header">Task <small><span class="glyphicon glyphicon-check"></span></small></h1>
     <ul class="nav nav-tabs">
-        <li><a href="#">Task</a></li>
-        <li class="active"><a href="#">Task</a></li>
-        <li><a href="#">Event</a></li>
-        <li><a href="#">Category Task</a></li>
+        <li><a href="#!task/short">Short Task</a></li>
+        <li class="active"><a href="#!task">Task</a></li>
+        <li><a href="#!task/event">Event</a></li>
+        <li><a href="#!task/category">Category Task</a></li>
     </ul>
+    <button type="button" class="btn btn-info" ng-click="listTask()">List
+        <span class="glyphicon glyphicon-refresh"></span></button>
+    <button type="button" class="btn btn-success" ng-click="addTask()">Add
+        <span class="glyphicon glyphicon-plus"></span></button>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
@@ -22,57 +26,54 @@
                 <th>Finishing date</th>
                 <th>Reminder date</th>
                 <th>Finished</th>
+                <th ng-hide="true">Body</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>My Title 1</td>
-                <td>Home</td>
-                <td>1/01/2017</td>
-                <td>2/01/2017</td>
-                <td>-</td>
-                <td>+</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Title</td>
-                <td>my work</td>
-                <td>25/03/2018</td>
-                <td>28/03/2018</td>
-                <td>23/03/2018</td>
-                <td>-</td>
+            <tr ng-repeat="item in listT">
+                <td>{{ item.id }}</td>
+                <td>{{ item.title }}</td>
+                <td>{{ item.category }}</td>
+                <td>{{ item.starting_date }}</td>
+                <td>{{ item.finishing_date }}</td>
+                <td>{{ item.finished }}</td>
+                <td>{{ item.reminder_date }}</td>
+                <td ng-hide="true">{{ item.body }}</td>
+                <td><button type="button" class="btn btn-info" ng-click="editTask(item)">
+                    <span class="glyphicon glyphicon-pencil"></span></button></td>
+                <td><button type="button" class="btn btn-danger" ng-click="deleteTask(item.id)">
+                    <span class="glyphicon glyphicon-remove"></span></button></td>
             </tr>
         </table>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-info">View</button>
-      <button type="button" class="btn btn-warning">Edit</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
-    <h3>Add form</h3>
-    <div>
+    <div ng-if="addTaskState || editTaskState">
+        <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-                Title<input type="text" class="form-control" placeholder="Title">
+                Title<input type="text" class="form-control" ng-model="task.title">
             </div>
             <div class="col-md-8">
-                Body<textarea class="form-control" rows="3"></textarea>
+                Body<textarea class="form-control" rows="8" ng-model="task.body"></textarea>
             </div>
             <div class="col-md-4">
-                Category<input type="text" class="form-control" placeholder="Category">
+                Category<input type="text" class="form-control" ng-model="task.category">
             </div>
             <div class="col-md-2">
-                Starting<input type="date" class="form-control" placeholder="Starting Date">
+                Start date<input type="text" class="form-control" ng-model="task.starting_date">
             </div>
             <div class="col-md-2">
-                Finished<input type="date" class="form-control" placeholder="Finished Date">
+                Finish date<input type="text" class="form-control" ng-model="task.finishing_date">
             </div>
             <div class="col-md-2">
-                Reminder<input type="date" class="form-control" placeholder="Reminder Date">
+                Reminder date<input type="text" class="form-control" ng-model="reminder_date">
             </div>
             <div class="checkbox">
-                <label><input type="checkbox" value="">Finished</label>
+                <label><input type="checkbox" ng-model="task.finished">Finished</label>
             </div>
-            <button type="button" class="btn btn-success">Add task</button>
+            <button type="button" class="btn btn-success" ng-click="createTask()" ng-if="addTaskState">
+                Add task</button>
+            <button type="button" class="btn btn-success" ng-click="updateTask()" ng-if="editTaskState">
+                Save task</button>
         </form>
     </div>
 </body>
