--- a/front/templates/password/password.html
+++ b/front/templates/password/password.html
@@ -34,10 +34,10 @@
         <h3>{{ edit_status }}</h3>
         <form role="form">
             <div class="col-md-4">
-                Resource url<input type="text" class="form-control" ng-model="diary.resource_url">
+                Resource url<input type="text" class="form-control" ng-model="password.resource_url">
             </div>
             <div class="col-md-4">
-                Password resource<input type="text" class="form-control" ng-model="diary.password_res">
+                Password resource<input type="text" class="form-control" ng-model="password.password_res">
             </div>
             <button type="button" class="btn btn-success" ng-click="createPassword()" ng-if="addPasswordState">
                 Add password</button>
