--- a/front/templates/contacts/contacts.html
+++ b/front/templates/contacts/contacts.html
@@ -29,7 +29,7 @@
                 <td>{{ item.phone }}</td>
                 <td>{{ item.email_address }}</td>
                 <td>{{ item.home_address }}</td>
-                <td>{{ item.birthday | date:'dd.MM.yyyy' }}</td>
+                <td>{{ item.birthday | date:'dd-MM-yyyy' }}</td>
                 <td>{{ item.add_reminder }}</td>
                 <td> <button type="button" class="btn btn-info" ng-click="editContact(item)">
                     <span class="glyphicon glyphicon-pencil"></span></button></td>
