Updated Budget ctrl & Html pages

--- a/front/templates/about.html
+++ b/front/templates/about.html
@@ -5,13 +5,23 @@
     <title>About</title>
 </head>
 <body>
-    <h1 class="page-header">About page</h1>
+    <h1 class="page-header">About project</h1>
     <div class="well">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit
-            sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus
-            magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum.
-            Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-            Aenean lacinia bibendum nulla sed consectetur.</p>
+        <h3>In project we use:</h3>
+        <li><strong><a href="https://www.djangoproject.com/">Python/Django</a> - back-end</strong>
+            <img src="img/python-django.png"></li>
+        <li><strong><a href="http://www.django-rest-framework.org/">Django REST framework</a> - API</strong>
+            <img src="img/django-rest-framework.png"></li>
+        <li><strong><a href="https://angularjs.org/">AngularJS</a> - front-end</strong>
+            <img src="img/angularjs.png"></li>
+        <li><strong><a href="https://getbootstrap.com/">Bootstrap</a> - css</strong>
+            <img src="img/bootstrap.png"></li>
+        <li><strong><a href="https://www.docker.com/">Docker</a> - containerization</strong>
+            <img src="img/docker.png"></li>
+        <li><strong><a href="https://nginx.org/">nginx</a> - server </strong>
+            <img src="img/nginx.png"></li>
+        <p class="text-center"><strong>Best regards {{ team }}</strong></p>
+        <div class="text-center"><img src="img/organizer_logo_small.png"></div>
     </div>
 </body>
 </html>
