--- a/front/templates/home.html
+++ b/front/templates/home.html
@@ -5,10 +5,15 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 class="page-header">Home page</h1>
+    <h1 class="page-header">Simple Organizer</h1>
     <div class="well">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit
-            sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="text-center"><img src="img/organizer_logo.png"></div>
+        <p><strong>Simple Organizer</strong> - The project is designed to improve and make your life more comfortable.
+            You can simply record your tasks, contacts, passwords and keep your budget and do not forget about the
+            events that are required for you.</p>
+        <p>We will <strong>update</strong> and <strong>improve</strong> our service and make it
+            even <strong>better</strong>.</p>
+        <p class="text-center"><strong>Best regards {{ team }}</strong></p>
     </div>
 </body>
 </html>
