--- a/front/templates/accounts/sing-up.html
+++ b/front/templates/accounts/sing-up.html
@@ -6,16 +6,15 @@
 </head>
 <body>
     <div class="container row">
+        <h4 class="alert alert-danger"><strong>Sorry!</strong> Registration off!</h4>
         <div class="col-md-4">
           <form class="form-signin">
             <h2 class="form-signin-heading">Please sign up</h2>
-              <h4 class="alert alert-danger"><strong>Attentione!</strong> Registration off!</h4>
+            <h5 class="alert alert-warning">Passwords MUST be identical!</h5>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-            <label for="inputPassword2" class="sr-only">Password2</label>
-            <input type="password" id="inputPassword2" class="form-control" placeholder="Password2" required="">
+            <input type="password" class="form-control" placeholder="Password" required="">
+            <input type="password" class="form-control" placeholder="Password" required="">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
           </form>
         </div>
