--- a/front/templates/password/password.html
+++ b/front/templates/password/password.html
@@ -43,6 +43,8 @@
                 Add password</button>
             <button type="button" class="btn btn-success" ng-click="updatePassword()" ng-if="editPasswordState">
                 Save password</button>
+            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addPasswordState || editPasswordState">
+                Cancel</button>
         </form>
     </div>
 </body>
