--- a/front/templates/budget/budget-account.html
+++ b/front/templates/budget/budget-account.html
@@ -63,6 +63,8 @@
                 Add account</button>
             <button type="button" class="btn btn-success" ng-click="updateBudgetAccount()" ng-if="editItemState">
                 Save account</button>
+            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addItemState || editItemState">
+                Cancel</button>
         </form>
     </div>
 </body>
