--- a/front/templates/task/category-task.html
+++ b/front/templates/task/category-task.html
@@ -44,6 +44,8 @@
                 Add category</button>
             <button type="button" class="btn btn-success" ng-click="updateCategoryTask()" ng-if="editTaskState">
                 Save category</button>
+            <button type="button" class="btn btn-warning" ng-click="cancel()" ng-if="addTaskState || editTaskState">
+                Cancel</button>
         </form>
     </div>
 </body>
